--- a/main/resources/view/Ot.fxml
+++ b/main/resources/view/Ot.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="656.0" prefWidth="1064.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.OtController">
+<AnchorPane prefHeight="656.0" prefWidth="1064.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.OtController">
 
     <children>
         <VBox alignment="TOP_CENTER" layoutX="19.0" layoutY="20.0" prefHeight="636.0" prefWidth="1031.0" spacing="20">
@@ -22,86 +22,76 @@
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="OT Management" textFill="WHITE" />
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: black;" text="OT Management" textFill="#1e1677" />
 
-
-            <GridPane hgap="10" vgap="15">
+            <GridPane hgap="5.0" prefHeight="149.0" prefWidth="991.0" vgap="7.0">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT" />
-                    <ColumnConstraints prefWidth="300" />
+                    <ColumnConstraints halignment="RIGHT" prefWidth="100.0" />
+                    <ColumnConstraints prefWidth="300.0" />
+               <ColumnConstraints prefWidth="100.0" />
+               <ColumnConstraints prefWidth="300.0" />
                 </columnConstraints>
 
-                <Label text="OT ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="90.0" text="OT ID:" textFill="BLACK" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Label>
 
-                <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="89.0" text="Employee ID:" textFill="BLACK" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Label>
                 <TextField fx:id="txtEmployeeId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Salary ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtSalaryId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Label prefHeight="17.0" prefWidth="93.0" text="Salary ID:" textFill="BLACK" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="txtSalaryId" promptText=" " GridPane.columnIndex="3" GridPane.rowIndex="1" />
 
-                <Label text="OT Hours:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="89.0" text="OT Hours:" textFill="BLACK" GridPane.rowIndex="3">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Label>
                 <TextField fx:id="txtOtHours" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                <Label text="Rate Per Hour:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="89.0" text="Rate Per Hour:" textFill="BLACK" GridPane.rowIndex="4">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Label>
                 <TextField fx:id="txtRatePerHour" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-                <Label text="OT Date:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="5">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-            <Label fx:id="lblOt" text="1" textFill="WHITE" GridPane.columnIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <TextField fx:id="txtOtDate" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <rowConstraints>
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-            </rowConstraints>
+                <Label text="OT Date:" textFill="BLACK" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="txtOtDate" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Label fx:id="lblOtId" prefHeight="17.0" prefWidth="112.0" text="01" GridPane.columnIndex="1" />
+
+                <rowConstraints>
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                </rowConstraints>
             </GridPane>
 
-
-            <HBox alignment="CENTER" spacing="15">
-                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
+            <HBox alignment="CENTER" prefHeight="30.0" prefWidth="991.0" spacing="15">
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-weight: bold;" text="Save" />
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-weight: bold;" text="Update" />
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete" />
+                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #9b59b6; -fx-text-fill: white; -fx-font-weight: bold;" text="Reset" />
             </HBox>
 
-
-            <TableView fx:id="tblOtRecords" onMouseClicked="#onClickTable" prefHeight="289.0" prefWidth="991.0">
+            <TableView fx:id="tblOtRecords" onMouseClicked="#onClickTable" prefHeight="331.0" prefWidth="991.0">
                 <columns>
                     <TableColumn fx:id="colOtId" prefWidth="100" text="OT ID" />
                     <TableColumn fx:id="colEmployeeId" prefWidth="123.33334350585938" text="Employee ID" />
