--- a/main/resources/view/Salary.fxml
+++ b/main/resources/view/Salary.fxml
@@ -14,115 +14,99 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="677.0" prefWidth="1431.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.SalaryController">
-
+<AnchorPane prefHeight="677.0" prefWidth="1431.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.SalaryController">
     <children>
-        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="657.0" prefWidth="959.0" spacing="20">
+        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="657.0" prefWidth="1110.0" spacing="20">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="Salary Management" textFill="WHITE">
-            <font>
-               <Font name="System Bold" size="12.0" />
-            </font>
-            <VBox.margin>
-               <Insets right="300.0" />
-            </VBox.margin></Label>
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: black;" text="Salary Management" textFill="#1d1570">
+                <font>
+                    <Font name="System Bold" size="22.0" />
+                </font>
+                <VBox.margin>
+                    <Insets right="300.0" />
+                </VBox.margin>
+            </Label>
 
-
-            <GridPane hgap="10" vgap="12">
+            <GridPane hgap="5.0" vgap="5.0">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT" />
-                    <ColumnConstraints prefWidth="300" />
+                    <ColumnConstraints halignment="RIGHT" prefWidth="150.0" />
+                    <ColumnConstraints prefWidth="300.0" />
+               <ColumnConstraints prefWidth="150.0" />
+               <ColumnConstraints prefWidth="300.0" />
                 </columnConstraints>
 
-                <Label text="Salary ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="103.0" text="Salary ID:" textFill="BLACK" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
 
-                <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtEmployeeId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label prefHeight="17.0" prefWidth="104.0" text="Employee ID:" textFill="BLACK" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <TextField fx:id="txtEmployeeId" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Basic Salary:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtBasicSalary" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Label prefHeight="17.0" prefWidth="101.0" text="Basic Salary:" textFill="BLACK" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <TextField fx:id="txtBasicSalary" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                <Label text="OT Hours:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtOtHours" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <Label prefHeight="17.0" prefWidth="64.0" text="OT Hours:" textFill="BLACK" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <TextField fx:id="txtOtHours" GridPane.columnIndex="3" GridPane.rowIndex="2" />
 
-                <Label text="Deduction:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtDeduction" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <Label prefHeight="17.0" prefWidth="100.0" text="Deduction:" textFill="BLACK" GridPane.rowIndex="5">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <TextField fx:id="txtDeduction" GridPane.columnIndex="3" GridPane.rowIndex="5" />
 
-                <Label text="Deduction Type:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="5">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtDeductionType" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                <Label text="Deduction Type:" textFill="BLACK" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <TextField fx:id="txtDeductionType" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
-                <Label text="Net Salary:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="6">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtNetSalary" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <Label fx:id="lblSalaryId" text="1" textFill="WHITE" GridPane.columnIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <rowConstraints>
+                <Label prefHeight="17.0" prefWidth="100.0" text="Net Salary:" textFill="BLACK" GridPane.rowIndex="9">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <TextField fx:id="txtNetSalary" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+
+                <Label fx:id="lblSalaryId" text="1" textFill="BLACK" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+
+                <rowConstraints>
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+               <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+               <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
                <RowConstraints />
                <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-            </rowConstraints>
+                </rowConstraints>
             </GridPane>
 
-
             <HBox alignment="CENTER" spacing="15">
-                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #00b894; -fx-text-fill: white; -fx-font-weight: bold;" text="Save" />
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #0984e3; -fx-text-fill: white; -fx-font-weight: bold;" text="Update" />
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #d63031; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete" />
+                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #a55eea; -fx-text-fill: white; -fx-font-weight: bold;" text="Reset" />
             </HBox>
 
-
-            <TableView fx:id="tblSalary" onMouseClicked="#onClickTable" prefHeight="250" prefWidth="1149.0">
+            <TableView fx:id="tblSalary" onMouseClicked="#onClickTable" prefHeight="329.0" prefWidth="1305.0">
                 <columns>
-                    <TableColumn fx:id="colSalaryId" prefWidth="91.33334732055664" text="Salary ID" />
-                    <TableColumn fx:id="colEmployeeId" prefWidth="112.66668701171875" text="Employee ID" />
-                    <TableColumn fx:id="colBasicSalary" prefWidth="146.66661071777344" text="Basic Salary" />
-                    <TableColumn fx:id="colOtHours" prefWidth="106.66665649414062" text="OT Hours" />
-                    <TableColumn fx:id="colDeduction" prefWidth="132.00009155273438" text="Deduction" />
-                    <TableColumn fx:id="colDeductionType" prefWidth="141.3333740234375" text="Deduction Type" />
-                    <TableColumn fx:id="colNetSalary" prefWidth="185.333251953125" text="Net Salary" />
+                    <TableColumn fx:id="colSalaryId" prefWidth="91.33" text="Salary ID" />
+                    <TableColumn fx:id="colEmployeeId" prefWidth="97.33331298828125" text="Employee ID" />
+                    <TableColumn fx:id="colBasicSalary" prefWidth="169.33326721191406" text="Basic Salary" />
+                    <TableColumn fx:id="colOtHours" prefWidth="89.33331298828125" text="OT Hours" />
+                    <TableColumn fx:id="colDeduction" prefWidth="131.33331298828125" text="Deduction" />
+                    <TableColumn fx:id="colDeductionType" prefWidth="103.33331298828125" text="Deduction Type" />
+                    <TableColumn fx:id="colNetSalary" prefWidth="234.66668701171875" text="Net Salary" />
                 </columns>
             </TableView>
         </VBox>
