--- a/main/resources/view/User.fxml
+++ b/main/resources/view/User.fxml
@@ -12,18 +12,15 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="677.0" prefWidth="1188.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.UserController">
-
+<AnchorPane prefHeight="677.0" prefWidth="1188.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.UserController">
     <children>
         <VBox layoutX="20.0" layoutY="20.0" prefHeight="641.0" prefWidth="1166.0" spacing="20">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="User Management" textFill="WHITE" />
-
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: black;" text="User Management" textFill="#211884" />
 
             <GridPane hgap="10" vgap="12">
                 <columnConstraints>
@@ -31,76 +28,44 @@
                     <ColumnConstraints prefWidth="300" />
                 </columnConstraints>
 
-                <Label text="User ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="67.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="User ID:" textFill="#181357" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Label fx:id="lblUserId" style="-fx-text-fill: black; -fx-font-weight: bold;" text="1" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label text="User Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label style="-fx-text-fill: black; -fx-font-weight: bold;" text="User Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                 <TextField fx:id="txtUserName" promptText="John Doe" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Mobile:" textFill="#fbfbfb" GridPane.columnIndex="0" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="65.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Mobile:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                 <TextField fx:id="txtMobile" promptText="0700000000" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                <Label text="Email:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="67.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                 <TextField fx:id="txtEmail" promptText="example@email.com" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                <Label text="Role:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-            <TextField fx:id="txtRole" promptText="admin" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Label fx:id="lblUserId" text="1" textFill="WHITE" GridPane.columnIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <rowConstraints>
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-            </rowConstraints>
+                <Label prefHeight="17.0" prefWidth="67.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Role:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <TextField fx:id="txtRole" promptText="admin" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+
+                <rowConstraints>
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                </rowConstraints>
             </GridPane>
 
-
-            <HBox alignment="CENTER" prefHeight="25.0" prefWidth="952.0" spacing="15">
-                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
+            <HBox alignment="CENTER" spacing="15">
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-weight: bold;" text="Save" />
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-weight: bold;" text="Update" />
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete" />
+                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #9b59b6; -fx-text-fill: white; -fx-font-weight: bold;" text="Reset" />
             </HBox>
-
 
             <TableView fx:id="tblUser" onMouseClicked="#onClickTable" prefHeight="408.0" prefWidth="1126.0">
                 <columns>
-                    <TableColumn fx:id="colUserId" prefWidth="127.33330917358398" text="User ID" />
-                    <TableColumn fx:id="colUserName" prefWidth="294.6667022705078" text="User Name" />
-                    <TableColumn fx:id="colMobile" prefWidth="190.0" text="Mobile" />
-                    <TableColumn fx:id="colEmail" prefWidth="182.0" text="Email" />
-                    <TableColumn fx:id="colRole" prefWidth="175.3333740234375" text="Role" />
+                    <TableColumn fx:id="colUserId" prefWidth="127.33" style="-fx-font-weight: bold; -fx-text-fill: black;" text="User ID" />
+                    <TableColumn fx:id="colUserName" prefWidth="294.67" style="-fx-font-weight: bold; -fx-text-fill: black;" text="User Name" />
+                    <TableColumn fx:id="colMobile" prefWidth="190.0" style="-fx-font-weight: bold; -fx-text-fill: black;" text="Mobile" />
+                    <TableColumn fx:id="colEmail" prefWidth="182.0" style="-fx-font-weight: bold; -fx-text-fill: black;" text="Email" />
+                    <TableColumn fx:id="colRole" prefWidth="175.33" style="-fx-font-weight: bold; -fx-text-fill: black;" text="Role" />
                 </columns>
             </TableView>
         </VBox>
