--- a/main/resources/view/Employee.fxml
+++ b/main/resources/view/Employee.fxml
@@ -3,16 +3,20 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="697.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController">
    <children>
@@ -60,7 +64,6 @@
                <TextField fx:id="txtDeptId" promptText="e.g., D001" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
                <Label prefHeight="17.0" prefWidth="99.0" style="-fx-font-weight: bold;" text="Date of Birth:" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-               <TextField fx:id="txtDob" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
                <Label style="-fx-font-weight: bold;" text="Age:" textFill="black" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                <TextField fx:id="txtAge" promptText="e.g., 35" GridPane.columnIndex="3" GridPane.rowIndex="3" />
@@ -72,21 +75,36 @@
                <TextField fx:id="txtEmail" promptText="e.g., employee@email.com" GridPane.columnIndex="3" GridPane.rowIndex="4" />
 
                <Label prefHeight="17.0" prefWidth="96.0" style="-fx-font-weight: bold;" text="Join Date:" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-               <TextField fx:id="txtJoinDate" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
                <Label style="-fx-font-weight: bold;" text="Contact:" textFill="black" GridPane.columnIndex="2" GridPane.rowIndex="5" />
                <TextField fx:id="txtContact" promptText="0700000000" GridPane.columnIndex="3" GridPane.rowIndex="5" />
 
                <Label style="-fx-font-weight: bold;" text="Position ID:" textFill="black" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                <TextField fx:id="txtPositionId" promptText="e.g., P001" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+               <DatePicker fx:id="cmbDob" prefHeight="25.0" prefWidth="199.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               <DatePicker fx:id="cmbJoinDate" prefHeight="25.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             </children>
          </GridPane>
 
          <HBox alignment="CENTER" prefHeight="21.0" prefWidth="1228.0" spacing="10">
+            <Button fx:id="btnReport" mnemonicParsing="false" onAction="#reportOnAction" prefHeight="32.0" style="-fx-background-color: #636e72;" text="Genarate Employee Report" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
             <Button fx:id="btnSave" onAction="#saveOnAction" prefHeight="32.0" prefWidth="90.0" style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-weight: bold;" text="Save" />
             <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="32.0" prefWidth="90.0" style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-weight: bold;" text="Update" />
             <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="32.0" prefWidth="90.0" style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete" />
             <Button fx:id="btnReset" onAction="#resetOnAction" prefHeight="32.0" prefWidth="90.0" style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-font-weight: bold;" text="Reset" />
+            <Button fx:id="btnMail" mnemonicParsing="false" onAction="#mailOnAction" prefHeight="48.0" prefWidth="71.0" style="-fx-background-color: #ffffff;">
+               <graphic>
+                  <ImageView fitHeight="34.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../image/icons8-email-50.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
          </HBox>
 
          <TableView fx:id="tblEmployees" onMouseClicked="#onClickTable" prefHeight="379.0" prefWidth="1213.0" style="-fx-border-color: lightgray;">
