--- a/main/resources/view/Mail.fxml
+++ b/main/resources/view/Mail.fxml
@@ -1,37 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.MailController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.MailController">
 
     <children>
-        <VBox spacing="10.0" alignment="TOP_LEFT" AnchorPane.topAnchor="20.0" AnchorPane.leftAnchor="20.0"
-              AnchorPane.rightAnchor="20.0" AnchorPane.bottomAnchor="20.0">
+        <VBox alignment="CENTER" layoutX="163.0" layoutY="87.0" spacing="20.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <children>
-                <Label text="To:" />
-                <TextField fx:id="txtTo" promptText="Enter recipient email" />
-
-                <Label text="Subject:" />
-                <TextField fx:id="txtSubject" promptText="Enter subject" />
-
-                <Label text="Message:" />
-                <TextArea fx:id="txtMessage" promptText="Enter your message" prefHeight="150.0" wrapText="true" />
-
-                <HBox spacing="10.0" alignment="CENTER_RIGHT">
-                    <children>
-                        <Button text="Send" fx:id="btnSend" onAction="#btnSendOnAction" />
-                        <Button text="Clear" fx:id="btnClear" onAction="#btnClearOnAction" />
-                    </children>
-                </HBox>
+                <TextField fx:id="txtTo" promptText="To:" />
+                <TextField fx:id="txtSubject" promptText="Subject" />
+                <TextArea fx:id="txtMessage" prefHeight="200.0" prefWidth="200.0" promptText="Message" />
+                <Button mnemonicParsing="false" onAction="#btnSendOnAction" prefHeight="25.0" prefWidth="162.0" style="-fx-background-color: #1B1464;" text="Send" textFill="WHITE" VBox.vgrow="ALWAYS">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font></Button>
             </children>
-            <padding>
-                <Insets top="10" right="10" bottom="10" left="10"/>
-            </padding>
         </VBox>
     </children>
 </AnchorPane>
